Agrego manejo de nulls, cambio en parser y modularizacion