@@ -6,10 +6,10 @@ public class CdCommandCreator implements CommandCreator{
     @Override
     public Command create(CommandParser.ParseCommand command) throws IllegalArgumentException {
         if (command.args().size() == 1) {
-            return new CdCommand(command.args().get(0));
+            return new CdCommand(command.args().getFirst());
         }
         else {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("Incorrect amount of arguments");
         }
 
     }
