@@ -6,7 +6,7 @@ public class MkdirCommandCreator implements CommandCreator{
     @Override
     public Command create(CommandParser.ParseCommand command) throws IllegalArgumentException {
         if (command.args().size() == 1) {
-            return new MkdirCommand(command.args().get(0));
+            return new MkdirCommand(command.args().getFirst());
         } else{
             throw new IllegalArgumentException("No directory name provided.");
         }
