@@ -6,7 +6,7 @@ public class TouchCommandCreator implements CommandCreator{
     @Override
     public Command create(CommandParser.ParseCommand command) throws IllegalArgumentException {
         if (command.args().size() == 1) {
-            return new TouchCommand(command.args().get(0));
+            return new TouchCommand(command.args().getFirst());
         }
         else{
             throw new IllegalArgumentException("No name provided");
